@@ -37,6 +37,7 @@ Revision history for Rex
  - Add test for OS-specific dependencies
  - List optional features and their dependencies
  - List suggested development dependencies
+ - Test cpuinfo inventory
 
 1.12.1 2020-08-05 Ferenc Erki <erkiferenc@gmail.com>
  [DOCUMENTATION]
